add recent get records endpoint
