# internal/openapi/server.gen.go
@@ -37,6 +37,9 @@ type ServerInterface interface {
 	// get month records
 	// (GET /v2/record/{yyyymm})
 	GetV2RecordYyyymm(w http.ResponseWriter, r *http.Request, yyyymm string, params GetV2RecordYyyymmParams)
+	// Your GET endpoint
+	// (GET /v2/record/{yyyymm}/recent)
+	GetV2RecordYyyymmRecent(w http.ResponseWriter, r *http.Request, yyyymm string, params GetV2RecordYyyymmRecentParams)
 	// create record table
 	// (POST /v2/table/{year})
 	PostV2TableYear(w http.ResponseWriter, r *http.Request, year int)
@@ -250,6 +253,43 @@ func (siw *ServerInterfaceWrapper) GetV2RecordYyyymm(w http.ResponseWriter, r *h
 	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
+// GetV2RecordYyyymmRecent operation middleware
+func (siw *ServerInterfaceWrapper) GetV2RecordYyyymmRecent(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "yyyymm" -------------
+	var yyyymm string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "yyyymm", runtime.ParamLocationPath, chi.URLParam(r, "yyyymm"), &yyyymm)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "yyyymm", Err: err})
+		return
+	}
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params GetV2RecordYyyymmRecentParams
+
+	// ------------- Optional query parameter "num" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "num", r.URL.Query(), &params.Num)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "num", Err: err})
+		return
+	}
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.GetV2RecordYyyymmRecent(w, r, yyyymm, params)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
 // PostV2TableYear operation middleware
 func (siw *ServerInterfaceWrapper) PostV2TableYear(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -427,6 +467,9 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/v2/record/{yyyymm}", wrapper.GetV2RecordYyyymm)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/v2/record/{yyyymm}/recent", wrapper.GetV2RecordYyyymmRecent)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/v2/table/{year}", wrapper.PostV2TableYear)
